# doco

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mddoco/: cli.py  converter.py  graph.py  mermaid.py  pdf.py  renderer.py  scanner.py  toc.py  writer.py
src/mddoco/themes/: academic-wide.html  academic.html  dark-wide.html  dark.html  default-wide.html  default.html  professional-wide.html  professional.html
tests/: run_tests.sh
tests/fixtures/: 01_intro.md  02_features.md  03_diagrams.md  04_graph.md  05_graphs.md  _ignored.md  _invalid_graph.md  single.md
